backend/kubernetes/test/ingress-np.yml
apiVersion: v1
kind: Service
metadata:
  name: ingress-np
  namespace: ingress-nginx
spec:
  ports:
    - name: service
      port: 80
      targetPort: 80
      nodePort: 30000
  selector:
    app.kubernetes.io/name: ingress-nginx-test
    app.kubernetes.io/part-of: ingress-nginx-test
  type: NodePort
