backend/kubernetes/test/lb-test.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy-nginx
  labels:
    app: deploy-nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: deploy-nginx
  template:
    metadata:
      labels:
        app: deploy-nginx
    spec:
      containers:
        - name: nginx
          image: nginx
---
apiVersion: v1
kind: Service
metadata:
  name: lb-nginx
spec:
  selector:
    app: deploy-nginx
  externalTrafficPolicy: Local

  ports:
    - name: http
      port: 80
      targetPort: 80
  type: LoadBalancer
